Trying to fix an error that happens every time I push to github, errors state:The process '/usr/bin/git' failed with exit code 128 -- and No url found for submodule path 'html5-boilerplate' in .gitmodules. im worried my commits since adding boilerplate have been non-visibile since i didnt notice the error until now.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,4 +27,18 @@ h1{
     
 }
 
+/*Tablet
+@media screen and(min-width: 768px){
+    .box{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}*/
+
+/*Desktop
+@media screen and(min-width: 992px){
+    .box{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}*/
+
 
